# ME5413_Final_Project

./: .gitignore  .gitmodules  ISSUES.md  LICENSE  ORIGINAL_README.md  PROGRESS.md  README.md  REFLECTIONS.md  backup.txt  cache.cpp  docker-compose.yaml  finalProjectNote.md
.github/workflows/: industrial_ci_action.yml
docker/: dev-overlay.Dockerfile  nvidia-ros-noetic.Dockerfile  ros_entrypoint.sh
report_typ/: main.typ  template.typ
src/FAST_LIO/: CMakeLists.txt
src/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO/config/: ouster64.yaml  velodyne.yaml
src/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/FAST_LIO/src/: laserMapping.cpp
src/costmap_prohibition_layer/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  costmap_plugins.xml  package.xml
src/costmap_prohibition_layer/cfg/: CostmapProhibitionLayer.cfg
src/costmap_prohibition_layer/src/: costmap_prohibition_layer.cpp
src/interactive_tools/: CMakeLists.txt  package.xml  rviz_plugin.xml
src/interactive_tools/config/: config.yaml
src/interactive_tools/include/interactive_tools/: add_object_tool.h  rviz_panel.hpp
src/interactive_tools/launch/: test.launch
src/interactive_tools/resource/: simple_panel.ui
src/interactive_tools/rviz/: test.rviz
src/interactive_tools/src/: add_object_tool.cpp  goal_publisher_node.cpp  rviz_panel.cpp
src/jackal_description/config/: control.yaml  robot_localization.yaml
src/jackal_description/params/: base_local_planner_params.yaml  costmap_common_params.yaml
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo
src/jackal_navigation/cmake/: jackal_navigationConfig-version.cmake  jackal_navigationConfig.cmake
src/jackal_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_converter_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml  prohibition_areas.yaml  teb_local_planner_params.yaml
src/me5413_world/: CMakeLists.txt  package.xml
src/me5413_world/config/: config.yaml
src/me5413_world/include/me5413_world/: box_explorer_node.hpp  goal_publisher.hpp  goal_publisher_node.hpp  object_spawner_gz_plugin.hpp
src/me5413_world/launch/: amcl.launch  fast_lio.launch  find_box.launch  long_world.launch  main.launch  manual.launch  mapping.launch  mapping_gmapping.launch  move_base.launch  move_mapping.launch  my_mapping.launch  navigation.launch  navigation_amcl.launch  navigation_cartographer.launch  navigation_test.launch  simple_world.launch  spawn_jackal.launch  world.launch
src/me5413_world/launch/include/: gmapping_jackal.launch  move_base_jackal.launch  planar_box.urdf.xacro  spawn_jackal.launch
src/me5413_world/maps/: map.pgm  map.yaml  map_-0.05-1.5.pgm  map_-0.05-1.5.yaml  map_-0.05-10.pgm  map_-0.05-10.yaml  map_-0.1-15.pgm  map_-0.1-15.yaml  map_-0.11.pgm  map_-0.11.yaml  map_-0.12.pgm  map_-0.12.yaml  map_-0.15-10.pgm  map_-0.15-10.yaml  map_0.1.pgm  map_0.1.yaml  map_1.pgm  map_1.yaml  my_map.pgm  my_map.yaml  my_map_.pgm  my_map_.yaml  my_map__.pgm  my_map_fast_lio-.pgm
src/me5413_world/models/assembly_line/: model.config  model.sdf
src/me5413_world/models/assembly_line/meshes/: assembly_line.STL
src/me5413_world/models/bridge/: model.config  model.sdf
src/me5413_world/models/bridge/meshes/: bridge.STL
src/me5413_world/models/number1/: model.sdf
src/me5413_world/models/number2/: model.sdf
src/me5413_world/models/number3/: model.sdf
src/me5413_world/models/number4/: model.sdf
src/me5413_world/models/number5/: model.sdf
src/me5413_world/models/number6/: model.sdf
src/me5413_world/models/number7/: model.sdf
src/me5413_world/models/number8/: model.sdf
src/me5413_world/models/number9/: model.sdf
src/me5413_world/models/smart_house/: model.config  model.sdf
src/me5413_world/models/smart_house_2/: model.config  model.sdf
src/me5413_world/models/smart_house_3/: model.config  model.sdf
src/me5413_world/models/smart_house_3_working/: model.config  model.sdf
src/me5413_world/my_navigation/: move_base.launch
src/me5413_world/my_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml
src/me5413_world/my_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/me5413_world/outputs/: track_error_evaluation.py
src/me5413_world/outputs/results/dwa/: dwa_errors.csv
src/me5413_world/outputs/results/teb/: teb_errors.csv
src/me5413_world/outputs/teb/: teb_errors.csv
src/me5413_world/rviz/: fast_lio.rviz  gmapping.rviz  jackal.rviz  manual.rviz  navigation.rviz
src/me5413_world/scripts/: cal_target_point.py  dynamic_obstacle_updater.py  find_2d_box_node_py.py  find_2d_object_goal_publisher_node_py.py  listens.py  sift_detection_node_py.py  template_matching_node_py.py  track_error_logger.py
src/me5413_world/src/: box_explorer_node.cpp  goal_publisher_node.cpp  objdet.py  object_spawner_gz_plugin.cpp  template_matching_node.cpp
src/me5413_world/worlds/: long.world  me5413_project.world  me5413_project_2425  me5413_project_2425.world  me5413_project_2526.world  me5413_project_world.world
src/navigation/: CMakeLists.txt  package.xml
src/navigation/launch/: amcl.launch  move_base.launch  navigation.launch
src/navigation/maps/: map_improve_3.pgm  map_improve_3.yaml  map_new.pgm  map_new.yaml
src/navigation/params/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  (+2 more)
src/pcd_to_map/: CMakeLists.txt  package.xml
src/pcd_to_map/launch/: pcd_to_map.launch
src/pcd_to_map/map/: fast-lio-map.yaml  fast_lio_map_test.pgm  fastlio-asc2.pgm  map-test.pgm  map-test.yaml
src/pcd_to_map/map/backup/: map_backup.pgm
src/pcd_to_map/map/fastlio_final/: my_map.yaml
src/pcd_to_map/map/map/: map.pgm
src/pcd_to_map/src/: pcd_to_map.cpp
src/pcdtomap/: CMakeLists.txt  package.xml
(+14 files in other folders)
